@@ -1,3 +1,5 @@
+	* fixed announce bug where event=completed would not be sent if it violated the
+	  min-announce of the tracker
 	* fixed limitation in rate limiter
 	* fixed build error with boost 1.44
 
